# strongswan

./: configure.ac
conf/: Makefile.am
conf/plugins/: sa-notify.opt
scripts/: test.sh
src/libcharon/: Makefile.am
src/libcharon/plugins/sa_notify/: Makefile.am  ipsec_msg.pb-c.c  ipsec_msg.pb-c.h  sa_notify_listener.c  sa_notify_listener.h  sa_notify_plugin.c  sa_notify_plugin.h
src/libcharon/plugins/sa_notify/protobuf/: ipsec_msg.proto
src/libcharon/sa/ikev2/: task_manager_v2.c
src/libstrongswan/plugins/openssl/: openssl_ed_private_key.c  openssl_x_diffie_hellman.c
src/libstrongswan/tests/suites/: test_ed448.c
src/swanctl/: swanctl.h
